@@ -1,3 +1,9 @@
+2009-07-01  Badlop  <badlop@process-one.net>
+
+	* src/mod_muc_admin.erl: Add two new commands: muc-create-room,
+	muc-change-room-option. Also added muc-set-room-affiliation, but
+	requires a small patch in ejabberd 2.0.x.
+
 2009-06-10  Badlop  <badlop@process-one.net>
 
 	* src/mod_muc_admin.erl: Update records copied from mod_muc_room to
